syntax = "proto3";

option csharp_namespace = "AccountServiceProto";

package account;

message AccountRequest {
  string id = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  string patronymic = 5;
};

message AccountResponse {
  string id = 1;
  bool success = 2;
}

message AccountsRequest {

}

message AccountSubscribe {
  string email = 1;
}

message AccountsResponse {
  repeated AccountSubscribe accounts = 1;
}

service Account {
  rpc AddAccount (AccountRequest) returns (AccountResponse);
  rpc GetAccounts (AccountRequest) returns (AccountsResponse);
}